--- a/scripts/k8s-worker-setup.yml
+++ b/scripts/k8s-worker-setup.yml
@@ -109,6 +109,14 @@
         name: kubelet
         enabled: yes
         state: started
-        
+
+    - name: Copy file.txt to the root user's home directory
+      copy:
+        src: file.txt  # Path to file.txt on the Ansible controller
+        dest: "/root/file.txt"  # Destination path in the root user's home directory
+        owner: root  # Set the owner of the copied file to root
+        group: root  # Set the group of the copied file to root
+        mode: "0644"  # Set the permissions of the copied file to 0644
+      
     - name: Execute command from file.txt
-      shell: "bash file.txt"
+      shell: "bash /root/file.txt"
