--- a/scripts/monitring-deployment.yml
+++ b/scripts/monitring-deployment.yml
@@ -10,9 +10,17 @@
 
     - name: Wait for nodeexporter pod to be ready
       shell: sleep 2m
+
+    - name: Get nodeexporter pod name
+      shell: kubectl get pods -l app=nodeexporter -o jsonpath='{.items[0].metadata.name}'
+      register: nodeexporter_pod_name
       
     - name: Expose nodeexporter pod
-      shell: kubectl expose pod nodeexporter --type=NodePort --port=9100 --target-port=9100
+      shell: kubectl expose pod {{ nodeexporter_pod_name.stdout }} --type=NodePort --port=9100 --target-port=9100
+
+    - name: Get cadvisor pod name
+      shell: kubectl get pods -l app=cadvisor -o jsonpath='{.items[0].metadata.name}'
+      register: cadvisor_pod_name
 
     - name: Expose cadvisor pod
-      shell: kubectl expose pod cadvisor --type=NodePort --port=8080 --target-port=8080
+      shell: kubectl expose pod {{ cadvisor_pod_name.stdout }} --type=NodePort --port=8080 --target-port=8080
